--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -22,3 +22,13 @@ jobs:
       - run: npm run test
       - run: npm run build
 
+      - uses: actions/upload-artifact@v4
+        with:
+          name: coverage
+          path: backend/coverage/**
+          retention-days: 5
+      - uses: actions/upload-artifact@v4
+        with:
+          name: dist
+          path: backend/dist/index.js
+          retention-days: 5
