--- a/backend/package.json
+++ b/backend/package.json
@@ -1,11 +1,15 @@
 {
   "name": "backend",
   "version": "1.0.0",
+  "overrides": {
+  "undici": "5.26.3"
+  },
   "description": "",
   "main": "src/main.ts",
   "scripts": {
     "dev": "nodemon",
     "test": "jest",
+    "test:api": "stepci run stepci/workflow.yml",
     "build": "ncc build"
   },
   "author": "",
@@ -25,6 +29,7 @@
     "jest": "^29.3.1",
     "nodemon": "^2.0.20",
     "prettier": "^3.5.3",
+    "stepci": "2.6.3",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
