--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -24,6 +24,9 @@ jobs:
       - run: npm ci
       - run: npm run test -- --coverage
       - run: npm run build
+      
+      - run: node dist/index.js &
+      - run: npm run test:qpi
 
       - uses: actions/upload-artifact@v4
         if: always()
