--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
   "name": "backend",
   "version": "1.0.0",
   "overrides": {
-  "undici": "5.26.3"
+    "undici": "5.26.3"
   },
   "description": "",
   "main": "src/main.ts",
@@ -32,6 +32,7 @@
     "stepci": "2.6.3",
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "wait-on": "^7.0.1"
   }
 }
