--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -27,7 +27,7 @@ jobs:
       
       - run: node dist/index.js &
       - run: npx wait-on -t 10000 http://localhost:8080/api/health
-      - run: npm run test:qpi
+      - run: npm run test:api
 
       - uses: actions/upload-artifact@v4
         if: always()
